--- a/inicio.html
+++ b/inicio.html
@@ -17,7 +17,7 @@
           </a>
           <ul class="dropdown-menu">
             <nav class="navbar navbar-expand-lg bg-warning"></nav>
-            <li><a class="dropdown-item" href="#">Hoddies</a></li>
+            <li><a class="dropdown-item" href="hoddie.html">Hoddies</a></li>
             <nav class="navbar navbar-expand-lg bg-warning"></nav>
             <li><a class="dropdown-item" href="#">Poleras</a></li>
             <nav class="navbar navbar-expand-lg bg-warning"></nav>
@@ -35,8 +35,8 @@
                 <a class="nav-link active" aria-current="page" href="#">Contáctanos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Carrito</a>
-            </ul>
+                <a class="nav-link active" aria-current="page" href="#">Carrito</a>
+                </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Búsqueda" aria-label="Search">
               <button class="btn btn-outline-dark" type="submit">Buscar</button>
@@ -46,9 +46,11 @@
       </nav>
 </div>
 
+
 <!--DIV DE CARRUSEL-->
 <div>
     <div style="margin: 80px;">
+      
     <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -57,21 +59,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/compressed_d94b5a342d863832093834160b5af7d6.webp" class="d-block w-100" alt="...">
+            <img src="imagenes/img1.webp" class="d-block w-100" alt="Imagen1"> 
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="imagenes/img2.webp" class="d-block w-100" alt="Imagen2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="imagenes/img3.webp" class="d-block w-100" alt="Imagen3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -147,6 +149,60 @@ const timer = setInterval(function() {
 </script>
 
 </div>
+
+<!--DIV DE CARDS-->
+<div>
+  <style>
+    .card-img-top {
+      height: 380px; /* Ajusta esta altura según tus necesidades */
+      object-fit: cover; /* Para asegurarse de que las imágenes mantengan su relación de aspecto */
+    }
+  </style>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <!-- Primera tarjeta existente -->
+  <div class="card h-100" style="width: 18rem;">
+    <img src="imagenes/card1.webp" class="card-img-top" alt="Yogger">
+    <div class="card-body">
+      <h5 class="card-title">Pantalón cargo multipocket</h5>
+      <p class="card-text">El pantalón cargo multipocket beige está fabricado en algodón 100%, con un fit oversize. Esta combinación ofrece un confort óptimo, sin comprometer la resistencia y durabilidad de la prenda. El diseño multipocket es una característica práctica que mejora la movilidad y transporte.</p>
+    </div>
+    <div class="card-body d-flex justify-content-between">
+      <a href="#" class="card-link">Ver</a>
+      <a href="#" class="card-link">Añadir al carrito</a>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100" style="width: 18rem;">
+    <img src="imagenes/card2.webp" class="card-img-top" alt="Hoddie">
+    <div class="card-body">
+      <h5 class="card-title">Hoddie oversize heavyweight® gris melange</h5>
+      <p class="card-text">Nuevo Polerón canguro heavyweight color gris melange, calidad Premium, Material 100 % Algodón, 500 grs. Tela Pre encogida y suavizada. Fit oversize.</p>
+    </div>
+    <div class="card-body d-flex justify-content-between">
+      <a href="#" class="card-link">Ver</a>
+      <a href="#" class="card-link">Añadir al carrito</a>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100" style="width: 18rem;">
+    <img src="imagenes/card3.webp" class="card-img-top" alt="Hoddie">
+    <div class="card-body">
+      <h5 class="card-title">Polera World Members color blanco</h5>
+      <p class="card-text">Nueva Polera color blanco, estampado en serigrafía. Fit oversize, material 100 % Algodón, 210 gr.</p>
+    </div>
+    <div class="card-body d-flex justify-content-between">
+      <a href="#" class="card-link">Ver</a>
+      <a href="#" class="card-link">Añadir al carrito</a>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
     
 </body>
 </html>
