--- a/hoddie.html
+++ b/hoddie.html
@@ -45,7 +45,131 @@
         </div>
       </nav>
 </div>
-    <h2>Hoddies</h2>
-    
+<br>
+    <h2>Hoodies</h2>
+    <br>
+    <br>
+    <style>
+        .card-img-top {
+          height: 380px; /* Ajusta esta altura según tus necesidades */
+          object-fit: cover; /* Para asegurarse de que las imágenes mantengan su relación de aspecto */
+        }
+    </style>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+        <div class="card">
+            <figure>
+                <img src="imagenes/card2.webp" alt="">
+            </figure>
+            <div class="contenido">
+                <h3>Titulo</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolor veritatis maiores porro excepturi quae temporibus explicabo dolores magnam odio!</p>
+                <a href="#">Ver</a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+    <div class="card">
+        <figure>
+            <img src="imagenes/card1.webp" alt="">
+        </figure>
+        <div class="contenido">
+            <h3>Titulo</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolor veritatis maiores porro excepturi quae temporibus explicabo dolores magnam odio!</p>
+            <a href="#">Ver</a>
+        </div>
+    </div>
+</div>
+    <div class="col">
+    <div class="card">
+        <figure>
+            <img src="imagenes/card3.webp" alt="">
+        </figure>
+        <div class="contenido">
+            <h3>Titulo</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolor veritatis maiores porro excepturi quae temporibus explicabo dolores magnam odio!</p>
+            <a href="#">Ver</a>
+        </div>
+    </div>
+    </div>
+    <br>
+    <hr>
+    <br>
+    <div class="col">
+        <div class="card">
+            <figure>
+                <img src="imagenes/card2.webp" alt="">
+            </figure>
+            <div class="contenido">
+                <h3>Titulo</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolor veritatis maiores porro excepturi quae temporibus explicabo dolores magnam odio!</p>
+                <a href="#">Ver</a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <figure>
+                <img src="imagenes/card2.webp" alt="">
+            </figure>
+            <div class="contenido">
+                <h3>Titulo</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolor veritatis maiores porro excepturi quae temporibus explicabo dolores magnam odio!</p>
+                <a href="#">Ver</a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <figure>
+                <img src="imagenes/card2.webp" alt="">
+            </figure>
+            <div class="contenido">
+                <h3>Titulo</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolor veritatis maiores porro excepturi quae temporibus explicabo dolores magnam odio!</p>
+                <a href="#">Ver</a>
+            </div>
+        </div>
+    </div>
+    <br>
+    <hr>
+    <br>
+    <div class="col">
+        <div class="card">
+            <figure>
+                <img src="imagenes/card2.webp" alt="">
+            </figure>
+            <div class="contenido">
+                <h3>Titulo</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolor veritatis maiores porro excepturi quae temporibus explicabo dolores magnam odio!</p>
+                <a href="#">Ver</a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <figure>
+                <img src="imagenes/card2.webp" alt="">
+            </figure>
+            <div class="contenido">
+                <h3>Titulo</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolor veritatis maiores porro excepturi quae temporibus explicabo dolores magnam odio!</p>
+                <a href="#">Ver</a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <figure>
+                <img src="imagenes/card2.webp" alt="">
+            </figure>
+            <div class="contenido">
+                <h3>Titulo</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates dolor veritatis maiores porro excepturi quae temporibus explicabo dolores magnam odio!</p>
+                <a href="#">Ver</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
