--- a/inicio.html
+++ b/inicio.html
@@ -25,14 +25,14 @@
             <nav class="navbar navbar-expand-lg bg-warning"></nav>
           </ul>
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">DGONIX</a>
+          <a class="navbar-brand" href="inicio.html">DGONIX</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Contáctanos</a>
+                <a class="nav-link active" aria-current="page" href="contacto.html">Contáctanos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Carrito</a>
@@ -59,21 +59,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/img1.webp" class="d-block w-100" alt="Imagen1"> 
+            <img src="imagenes/img1-fotor-20240406222330.jpg" class="d-block w-100" alt="Imagen1"> 
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="imagenes/img2.webp" class="d-block w-100" alt="Imagen2">
+            <img src="imagenes/img2-fotor-20240406222439.jpg" class="d-block w-100" alt="Imagen2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="imagenes/img3.webp" class="d-block w-100" alt="Imagen3">
+            <img src="imagenes/img3-fotor-20240406222511.jpg" class="d-block w-100" alt="Imagen3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -149,6 +149,9 @@ const timer = setInterval(function() {
 </script>
 
 </div>
+<br>
+<br>
+<br>
 
 <!--DIV DE CARDS-->
 <div>
@@ -199,6 +202,7 @@ const timer = setInterval(function() {
       <a href="#" class="card-link">Añadir al carrito</a>
     </div>
   </div>
+</div>
 </div>
 </div>
 </div>
