--- a/contacto.html
+++ b/contacto.html
@@ -52,22 +52,43 @@
 
 
 <!--DIV DE CARD DE CONTACTO-->
-<div class="card mb-3">
-    <img src="..." class="card-img-top" alt="...">
+<div class="card1 mb-3">
+    <img src="imagenes/imgc.jpg" class="card-img-top">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <br>
+        <br>
+        <div class="textotitulo">
+        <h2 class="card-title">DGONIX, dale tu real cortex</h2>
     </div>
-  </div>
-  <div class="card">
+        <br>
+        <br>
+        <div class="textocontacto">
+        <p class="card-text">Bienvenid@ a nuestra tienda online, ¿Estás list@ para darle tu cortex?, esperamos que si 
+        de parte de la familia DGONIX, a continuación te dejamos nuestras redes sociales para que estés atent@ al merch 
+        del mes de Abril, así mismo, te dejamos un mapa de nuestra sucursal física en Viña del Mar.
+        </p>
+    </div>
+    </div>
+    </div>
+    <br>
+    <br>
+<!--DIV DE CARD DE REDES-->
+<div class="cardredes">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+    Nuestras Redes Sociales:
     </div>
-    <img src="..." class="card-img-bottom" alt="...">
-  </div>
+</div>
+<br>
+<br>
+<br>
+<div class="card" style="width: 18rem;">
+    <img src="imagenes/wsp.webp" class="card-img-top">
+    <div class="card-body">
+    <a href="#" class="btn btn-success">Añadir</a>
+    </div>
+
+
+
 
 
 
