--- a/inicio.html
+++ b/inicio.html
@@ -17,7 +17,7 @@
           </a>
           <ul class="dropdown-menu">
             <nav class="navbar navbar-expand-lg bg-warning"></nav>
-            <li><a class="dropdown-item" href="hoddie.html">Hoddies</a></li>
+            <li><a class="dropdown-item" href="hoddie.html">Hoodies</a></li>
             <nav class="navbar navbar-expand-lg bg-warning"></nav>
             <li><a class="dropdown-item" href="#">Poleras</a></li>
             <nav class="navbar navbar-expand-lg bg-warning"></nav>
