--- a/vistaespecificahoodie.html
+++ b/vistaespecificahoodie.html
@@ -59,7 +59,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="imagenes/img1.webp" class="d-block w-100" alt="Imagen1"> 
+              <img src="imagenes/card2.webp" class="d-block w-100" alt="Imagen1"> 
               <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
